--- a/css/ownStyle.css
+++ b/css/ownStyle.css
@@ -102,31 +102,66 @@ section.yell {
 
 #kep2,
 #kep3 {
-    width: 200px;
+    width: 180px;
+}
+
+div.col-xs-12 h1.bigger {
+    font-size: 4.5em;
 }
 
 /*---- WHITE SECTION ------------------*/
 
 section.white {
     position: relative;
-    padding: 50px 0 50px 0;
+    padding: 100px 0 130px 0;
 }
 
 .features {
-    padding: 20px;
+    padding: 30px;
 }
 
 .features>h6 {
     font-size: 5em;
+    color: rgb(150, 1, 83);
+}
+
+div.col-xs-12 p,
+.features p {
+    color: gray;
+}
+
+section.white div.col-xs-12 {
+    padding: 0 0 70px 0;
 }
 
 /*---- PHOTO SECTION ------------------*/
 
 section.photo {
-    background: url("/img/bg-cta.jpg") no-repeat;
+    background: url("/img/bg-cta.jpg") no-repeat center center;
     background-size: cover;
     position: relative;
     padding: 200px 0 200px 0;
+    color: white;
+}
+
+section.photo::after {
+    content: "";
+    display: table;
+    clear: both;
+    background: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+section.photo * {
+    z-index: 1000;
+}
+
+div.col-xs-12 h1.bigger {
+    font-size: 4.5em;
 }
 
 /*---- FOOTER ------------------*/
