--- a/css/ownStyle.css
+++ b/css/ownStyle.css
@@ -134,6 +134,52 @@ section.white div.col-xs-12 {
     padding: 0 0 70px 0;
 }
 
+/*---- CONTACT SECTION ------------------*/
+
+section.contact {
+    background-color: rgba(255, 201, 75, 0.9);
+    position: relative;
+    padding: 130px 0 130px 0;
+}
+
+section.contact:hover {
+    background-color: rgba(255, 201, 75, 1);
+}
+
+section.contact h2 {
+    border-radius: 50%;
+    color: white;
+    margin: 0;
+    padding: 25px 20px 20px 20px;
+    display: inline-block;
+    width: 80px;
+    height: 80px;
+}
+
+section.contact h2.fb {
+    background-color: #3b5998;
+}
+
+section.contact h2.fb:hover {
+    background-color: #8b9dc3;
+}
+
+section.contact h2.tw {
+    background-color: #00aced;
+}
+
+section.contact h2.tw:hover {
+    background-color: #0084b4;
+}
+
+section.contact h2.gplus {
+    background-color: #d34836;
+}
+
+section.contact h2.gplus:hover {
+    background-color: #DA6354;
+}
+
 /*---- PHOTO SECTION ------------------*/
 
 section.photo {
@@ -148,7 +194,7 @@ section.photo::after {
     content: "";
     display: table;
     clear: both;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.6);
     width: 100%;
     height: 100vh;
     position: absolute;
@@ -158,10 +204,6 @@ section.photo::after {
 
 section.photo * {
     z-index: 1000;
-}
-
-div.col-xs-12 h1.bigger {
-    font-size: 4.5em;
 }
 
 /*---- FOOTER ------------------*/
