--- a/css/ownStyle.css
+++ b/css/ownStyle.css
@@ -14,6 +14,7 @@ h1 {
 
 h2 {
     font-family: 'Catamaran', Helvetica, Arial, sans-serif;
+    font-size: 2.3em;
 }
 
 button.btn.btn-default.mybtn {
@@ -59,10 +60,6 @@ section.top {
     margin: 50px 0 0 0;
 }
 
-section.top h2 {
-    font-size: 2.3em;
-}
-
 @media (min-width: 992px) {
     .kep1 {
         width: 250px;
@@ -102,6 +99,7 @@ li a.whith-white.navbar-brand:hover {
     color: white;
     text-decoration: none;
     font-variant-caps: all-petite-caps;
+    padding: 0 10px;
 }
 
 .navbar-default .my-nav>li>a:hover {
